# the-fullerene-factory

./: .gitignore  LICENSE  README.md  gradio.py  main.py  pyproject.toml  run_workflow.py
scripts_by_claude_to_get_data/: get_fullerene_xyz_download_links.py
scripts_by_llms_to_get_data/: get_addend_examples_from_pubchem.py
sft/: infer.py  sft.py
src/fullerene-factory/factory_crew/: crew.py
src/fullerenefactory/: __init__.py  __main__.py
src/fullerenefactory/conformer_crew/: crew.py
src/fullerenefactory/conformer_crew/config/: agents.yaml  tasks.yaml
src/fullerenefactory/initialization_crew/: crew.py
src/fullerenefactory/initialization_crew/config/: agents.yaml  tasks.yaml
src/fullerenefactory/post_processing_crew/: crew.py
src/fullerenefactory/post_processing_crew/config/: agents.yaml  tasks.yaml
src/fullerenefactory/tools/: best_conformation_finder_tool.py  database_storere_tool.py  delete_temporary_files.py  download_fullerene_tool.py  get_best_results_tool.py  run_mlip_tool.py  search_pubchem_tool.py  store_best_structure_tool.py  structure_generator_tool.py
src/fullerenefactory/tools/resources/: fullerene_molecules.json
